--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <ul class="values-list">
             <li class="values-item">
               <div class="values-icons">
-                <svg width="64px" heigh="64px"> 
-                  <use href="./images/icon.svg#icon-antenna"></use>
+                <svg width="64px" height="64px"> 
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>  
               <h3 class="values-subtitle">Strategy</h3>
@@ -75,8 +75,8 @@
               </p>
             </li>
             <li class="values-item"> <div class="values-icons">
-              <svg width="64px" heigh="64px"> 
-                <use href="./images/icon.svg#icon-clock"></use>
+              <svg width="64px" height="64px"> 
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>  
               <h3 class="values-subtitle">Punctuality</h3>
@@ -87,7 +87,7 @@
             </li>
             <li class="values-item"> <div class="values-icons">
               <svg width="64px" heigh="64px"> 
-                <use href="./images/icon.svg#icon-diagram"></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>   
               <h3 class="values-subtitle">Diligence</h3>
@@ -97,8 +97,8 @@
               </p>
             </li>
             <li class="values-item"> <div class="values-icons">
-              <svg width="64px" heigh="64px"> 
-                <use href="./images/icon.svg#icon-astronaut"></use>
+              <svg width="64px" height="64px"> 
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>  
               <h3 class="values-subtitle">Technologies</h3>
@@ -417,28 +417,28 @@
           <li class="social-media-item">
             <a class="social-media-link footer-social-media-link" href="">
               <svg class="social-icon" width="16" height="16">
-                <use href="./images/icon.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
               <svg class="social-icon" width="16" height="16">
-                <use href="./images/icon.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
               <svg class="social-icon" width="16" height="16">
-                <use href="./images/icon.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li> 
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
               <svg class="social-icon" width="16" height="16">
-                <use href="./images/icon.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
