--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </p>
             </li>
             <li class="values-item"> <div class="values-icons">
-              <svg width="64px" heigh="64px"> 
+              <svg width="64px" height="64px"> 
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>   
@@ -416,28 +416,28 @@
         <ul class="social-media"> 
           <li class="social-media-item">
             <a class="social-media-link footer-social-media-link" href="">
-              <svg class="social-icon" width="16" height="16">
+              <svg class="social-icon" width="64" height="64">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
-              <svg class="social-icon" width="16" height="16">
+              <svg class="social-icon" width="64" height="64">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
-              <svg class="social-icon" width="16" height="16">
+              <svg class="social-icon" width="64" height="64">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li> 
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
-              <svg class="social-icon" width="16" height="16">
+              <svg class="social-icon" width="64" height="64">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
