--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
         <ul class="header-nav-list">
           <li class="header-nav-item">
-            <a class="header-nav-link" href="./index.html">Studio</a>
+            <a class="header-nav-link active" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
             <a class="header-nav-link" href="">Portfolio</a>
@@ -64,7 +64,7 @@
           <ul class="values-list">
             <li class="values-item">
               <div class="values-icons">
-                <svg width="64px" height="64px"> 
+                <svg width="64" height="64"> 
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>  
@@ -75,7 +75,7 @@
               </p>
             </li>
             <li class="values-item"> <div class="values-icons">
-              <svg width="64px" height="64px"> 
+              <svg width="64" height="64"> 
                 <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>  
@@ -86,7 +86,7 @@
               </p>
             </li>
             <li class="values-item"> <div class="values-icons">
-              <svg width="64px" height="64px"> 
+              <svg width="64" height="64"> 
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>   
@@ -97,7 +97,7 @@
               </p>
             </li>
             <li class="values-item"> <div class="values-icons">
-              <svg width="64px" height="64px"> 
+              <svg width="64" height="64"> 
                 <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>  
