--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
     </main>
     <footer class="footer">
       <div class="container"> 
+        <div class="footer-logo-text"> 
       <a href="./index.html" class="logo-footer">WEB<span class="cloud">Studio</span>
       </a>
       <p class="footer-text">
@@ -416,33 +417,34 @@
         <ul class="social-media"> 
           <li class="social-media-item">
             <a class="social-media-link footer-social-media-link" href="">
-              <svg class="social-icon" width="64" height="64">
+              <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
-              <svg class="social-icon" width="64" height="64">
+              <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
-              <svg class="social-icon" width="64" height="64">
+              <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li> 
           <li class="social-media-item footer-social-media-item">
             <a class="social-media-link" href="">
-              <svg class="social-icon" width="64" height="64">
+              <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
         </ul> 
+      </div>
       </div>
     </footer>
   </body>
