--- a/index.html
+++ b/index.html
@@ -422,22 +422,22 @@
               </svg>
             </a>
           </li>
-          <li class="social-media-item footer-social-media-item">
-            <a class="social-media-link" href="">
+          <li class="social-media-item">
+            <a class="social-media-link footer-social-media-link" href="">
               <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="social-media-item footer-social-media-item">
-            <a class="social-media-link" href="">
+          <li class="social-media-item">
+            <a class="social-media-link footer-social-media-link" href="">
               <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li> 
-          <li class="social-media-item footer-social-media-item">
-            <a class="social-media-link" href="">
+          <li class="social-media-item">
+            <a class="social-media-link footer-social-media-link" href="">
               <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
