--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </li>
             <li class="values-item"> <div class="values-icons">
               <svg width="64" height="64"> 
-                <use href="./images/icons.svg#icon-diagram"></use>
+                <use href="images/icons.svg#icon-diagram"></use>
               </svg>
             </div>   
               <h3 class="values-subtitle">Diligence</h3>
@@ -128,28 +128,28 @@
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li> 
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -170,28 +170,28 @@
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li> 
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -212,28 +212,28 @@
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li> 
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -254,28 +254,28 @@
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li> 
                 <li class="social-media-item">
                   <a class="social-media-link" href="">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
