--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </li>
             <li class="values-item"> <div class="values-icons">
               <svg width="64" height="64"> 
-                <use href="images/icons.svg#icon-diagram"></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>   
               <h3 class="values-subtitle">Diligence</h3>
